[project]
name = "maritime-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.34",
]
